--- a/Week-06/css/style.css
+++ b/Week-06/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Rowdies', cursive;
+    font-family: "Merriweather", serif;
     background-image: url("../image/GI.jpg");
     background-position: top center;
 }
@@ -62,7 +62,7 @@ main {
     font-size: 102px;
     font-weight: 900;
     margin: 30px 0px;
-    text-shadow: 2px 10px rgba(0, 0, 0, 0.6);
+    text-shadow: 2px 8px rgba(0, 0, 0, 0.5);
 }
 
 .current .temp span {
